Color management Display Device other than sRGB segfaults Blender #58816

Closed
opened 2018-12-05 20:16:45 +01:00 by CansecoGPC · 10 comments
Member

System Information
Operating system: GNU/Linux Manjaro KDE
Graphics card: NVIDIA GTX 750 Ti

Blender Version
Broken:
Blender 2.80, 9b228e465f, 2018-12-05

Short description of error

On Color management, Display Device, selecting any option except sRGB makes Blender 2.80 Beta (9b228e465f) segfault with: OpenColorIO Error: DisplayTransform error. Cannot find display colorspace, ''.

Exact steps for others to reproduce the error
Open Blender, go to Render tab, Color Management, Display Device, select anything except sRGB.
Happens the same when opening files with a different Display Device selected.

**System Information** Operating system: GNU/Linux Manjaro KDE Graphics card: NVIDIA GTX 750 Ti **Blender Version** Broken: Blender 2.80, 9b228e465f13, 2018-12-05 **Short description of error** On Color management, Display Device, selecting any option except sRGB makes Blender 2.80 Beta (9b228e465f13) segfault with: OpenColorIO Error: DisplayTransform error. Cannot find display colorspace, ''. **Exact steps for others to reproduce the error** Open Blender, go to Render tab, Color Management, Display Device, select anything except sRGB. Happens the same when opening files with a different Display Device selected.
Author
Member

Added subscriber: @CansecoGPC

Added subscriber: @CansecoGPC
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-12-06 09:24:53 +01:00
Member

Confirmed.

in create_display_buffer_processor()
OCIO_ConstConfigRcPtr *config = OCIO_getCurrentConfig()
config seems to be garbled, following then leads to OCIO_abort()

1   raise                                                                     0x7ffff466a53f 
2   abort                                                                     0x7ffff4654895 
3   OCIO_reportError                               ocio_impl.cc          74   0x6251c18      
4   OCIO_reportException                           ocio_impl.cc          79   0x6251c43      
5   OCIOImpl::configGetProcessor                   ocio_impl.cc          467  0x625303f      
6   OCIO_configGetProcessor                        ocio_capi.cc          187  0x624ece2      
7   create_display_buffer_processor                colormanagement.c     826  0x2e51e63      
8   update_glsl_display_processor                  colormanagement.c     3405 0x2e57012      
9   IMB_colormanagement_setup_glsl_draw_from_space colormanagement.c     3453 0x2e570d3      
10  DRW_transform_to_display                       draw_manager.c        274  0x27fd3fc      
11  workspace_aa_draw_transform                    workbench_effect_aa.c 67   0x28858b2      
12  workbench_aa_draw_pass                         workbench_effect_aa.c 95   0x2885a89      
13  workbench_deferred_draw_scene                  workbench_deferred.c  1081 0x2885649      
14  workbench_solid_draw_background                solid_mode.c          68   0x2849549      
15  drw_engines_draw_background                    draw_manager.c        1038 0x27ff230      
16  DRW_draw_render_loop_ex                        draw_manager.c        1492 0x2800363      
17  DRW_draw_view                                  draw_manager.c        1395 0x27ffef7      
18  view3d_draw_view                               view3d_draw.c         1319 0x1da1e8e      
19  view3d_main_region_draw                        view3d_draw.c         1340 0x1da1f3e      
20  ED_region_do_draw                              area.c                529  0x22206b1

@Sergey: mind checking again?

Confirmed. in `create_display_buffer_processor()` OCIO_ConstConfigRcPtr *config = OCIO_getCurrentConfig() `config` seems to be garbled, following then leads to OCIO_abort() ``` 1 raise 0x7ffff466a53f 2 abort 0x7ffff4654895 3 OCIO_reportError ocio_impl.cc 74 0x6251c18 4 OCIO_reportException ocio_impl.cc 79 0x6251c43 5 OCIOImpl::configGetProcessor ocio_impl.cc 467 0x625303f 6 OCIO_configGetProcessor ocio_capi.cc 187 0x624ece2 7 create_display_buffer_processor colormanagement.c 826 0x2e51e63 8 update_glsl_display_processor colormanagement.c 3405 0x2e57012 9 IMB_colormanagement_setup_glsl_draw_from_space colormanagement.c 3453 0x2e570d3 10 DRW_transform_to_display draw_manager.c 274 0x27fd3fc 11 workspace_aa_draw_transform workbench_effect_aa.c 67 0x28858b2 12 workbench_aa_draw_pass workbench_effect_aa.c 95 0x2885a89 13 workbench_deferred_draw_scene workbench_deferred.c 1081 0x2885649 14 workbench_solid_draw_background solid_mode.c 68 0x2849549 15 drw_engines_draw_background draw_manager.c 1038 0x27ff230 16 DRW_draw_render_loop_ex draw_manager.c 1492 0x2800363 17 DRW_draw_view draw_manager.c 1395 0x27ffef7 18 view3d_draw_view view3d_draw.c 1319 0x1da1e8e 19 view3d_main_region_draw view3d_draw.c 1340 0x1da1f3e 20 ED_region_do_draw area.c 529 0x22206b1 ``` @Sergey: mind checking again?
Member

still get it after a60536956e

still get it after a60536956e

Added subscriber: @RainerTrummer

Added subscriber: @RainerTrummer

Same thing here on Windows. This started yesterday at some point, another compiled version with hash 245065460f works just fine. If the user has set that color space in his startup file (like I did), Blender never starts and throws the 'Cannot find Colorspace' Error on startup.

Same thing here on Windows. This started yesterday at some point, another compiled version with hash 245065460f3 works just fine. If the user has set that color space in his startup file (like I did), Blender never starts and throws the 'Cannot find Colorspace' Error on startup.

This issue was referenced by 0e5f97a3a1

This issue was referenced by 0e5f97a3a1b3ad2bc49b2e553345bd191b2e06cf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

I can confirm that the bug has been fixed, thanks, and keep up the good work.

I can confirm that the bug has been fixed, thanks, and keep up the good work.

also fixed on Windows, thanks!

also fixed on Windows, thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58816
No description provided.